# agy

./: .env.example  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: AGY_VS_AGY_PRIVATE.md
docs/FLOWSY/: FLOWSY_LANGUAGE_SPEC.MD
docs/agy/: ACTIONS_REFERENCE.md  CLI_PROJECT_STRUCTURE.md  ENVIRONMENT_VARIABLES.md  FLOW.md  FLOW_PARSING.MD
docs/dev/: CONTRIBUTING.md  PUBLIC_EXPORT.md  RELEASE_STEPS.md  TESTING.md
docs/integrations/: EMAIL.md  JIRA.md
scripts/email_example/: README.md  basic_operations.py  main.py
scripts/email_example/data/: faq.md
scripts/email_example/flows/: email_routing.flowsy
scripts/email_example/prompts/: answer_question.md
src/agy/: __init__.py  action_call.py  action_executor.py  action_type.py  ast_parser.py  cli.py  config.py  edge.py  flow.py  flow_executor.py  node.py  node_executor.py  record_sources.py  records.py  source_span.py  validation.py
src/agy/contrib/: __init__.py  action_type_functions.py  action_types.py  llm_call.py
src/agy/contrib/actions/: __init__.py  classify.py  debug.py  extract.py  flow_control.py  io.py  model_call.py  prompt.py  respond.py  run_flow.py  run_flow_batch.py  search_records.py  set_model_call.py
src/agy/contrib/prompt_contents/: generic_classify_instruction.md  generic_extract_instruction.md  generic_respond_instruction.md
src/agy/integrations/: __init__.py
src/agy/integrations/email/: __init__.py  _gmail_api.py  _graph_api.py  account.py  email.py  email_safety.py  env_config.py  gmail_account.py  graph_account.py  html_utils.py  imap_smtp_account.py  mock_account.py
src/agy/integrations/jira/: __init__.py  client.py  models.py
src/agy/templates/: enrichment_template.html
src/agy/templates/email_routing_gmail/: .env.example  README.md  main.py  pyproject.toml
src/agy/templates/email_routing_gmail/prompts/: answer_terms_question.md
src/agy/templates/email_routing_graph/: .env.example  README.md  main.py  pyproject.toml
src/agy/templates/email_routing_graph/prompts/: extract_claim_data.md
src/agy/templates/email_routing_imap_smtp/: .env.example  README.md  email_routing_flow.flowsy  main.py  pyproject.toml
src/agy/templates/email_routing_imap_smtp/data/: Travel_Insurance_Terms.md
src/agy/templates/email_routing_imap_smtp/objects/: claim_functions.py
src/agy/templates/email_routing_imap_smtp/prompts/: classify_insurance_email.md
src/agy/templates/email_routing_mock/: .env.example  README.md  email_routing_flow.flowsy  main.py  pyproject.toml
src/agy/templates/email_routing_mock/mock_mailbox/inbox/: car_insurance_question.eml  complete_claim.eml  coverage_question.eml  incomplete_claim.eml  pet_insurance_question.eml  unclear_request.eml
src/agy/templates/email_routing_mock/objects/: __init__.py
src/agy/templates/minimal/: README.md  example_flow.flowsy  main.py  pyproject.toml
src/agy/templates/minimal/objects/: __init__.py  example_context.py
src/agy/templates/minimal/prompts/: example_instruction.md
src/agy/templates/software_support_jira/: .env.example  README.md  main.py  pyproject.toml  software_support_flow.flowsy
src/agy/templates/software_support_jira/data/: software_support_faq.md
src/agy/templates/software_support_jira/objects/: __init__.py  support_helpers.py
src/agy/templates/software_support_jira/prompts/: answer_from_faq.md  classify_ticket_type.md
src/agy/utils/: file_readers.py
src/flowsy/: __init__.py  flowsy_grammar.v0.1.yaml  flowsy_parser.py  reference_flow.flowsy  reference_flow_parsed.json
test/: test_action_call.py  test_action_executor.py  test_action_type.py  test_ast_parser.py  test_cli_init.py  test_cli_main.py  test_edge.py  test_email_draft_mode.py  test_file_readers.py  test_flow.py  test_flow_additional.py  test_flow_executor.py  test_flow_parser.py  test_flowsy_parser.py  test_node.py  test_node_executor.py  test_path_resolution.py  test_records.py  test_run_flow_and_batch.py  test_validation.py  test_validation_helpers.py
test/contrib/: helpers.py  test_contrib.py  test_contrib_classifier.py  test_contrib_end.py  test_contrib_extractor.py  test_contrib_generator.py  test_contrib_loader.py  test_contrib_model_call.py  test_contrib_prompt.py  test_llm_call.py  test_llm_providers.py
test/integration/: __init__.py  conftest.py  test_email_gmail.py  test_email_graph.py  test_email_imap_smtp.py  test_jira_integration.py  test_template_e2e.py
test/test_flowsys/: create_test_pdfs.py  invoice_invalid_001_wrong_indentation.flowsy  invoice_invalid_002_missing_name.flowsy  invoice_invalid_003_missing_nodes.flowsy  invoice_invalid_004_unparseable_action.flowsy  invoice_invalid_005_nonexistent_function.flowsy  invoice_invalid_006_nonexistent_prompt_file.flowsy  invoice_invalid_007_wrong_context_in_type.flowsy  invoice_invalid_008_missing_method.flowsy  invoice_invalid_009_missing_attribute.flowsy  invoice_invalid_010_nonexistent_target_node.flowsy  invoice_invalid_011_invalid_edge_condition.flowsy  invoice_invalid_012_wrong_signature.flowsy  invoice_invalid_013_missing_api_keys.flowsy  invoice_invalid_014_invalid_key_name.flowsy  invoice_invalid_015_empty_nodes.flowsy  invoice_invalid_016_invalid_context_in_syntax.flowsy  invoice_invalid_017_invalid_end_syntax.flowsy  invoice_valid.flowsy  main.py
test/test_flowsys/data/: invoices.xlsx
test/test_flowsys/objects/: __init__.py  invoice.py
test/test_flowsys/prompts/: extract_invoice_data.md
test/unit/: test_email_env_config.py  test_email_provider_accounts.py  test_email_safety.py  test_gmail_api.py  test_graph_api.py  test_imap_smtp_account.py  test_imap_smtp_additional.py  test_mock_email_account.py
